--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: rundocs/jekyll-rtd-theme
 scss: |
   .text-uppercase{
-    text-transform: none; 
+    text-transform: none !important; 
   }
