--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,14 @@
 remote_theme: rundocs/jekyll-rtd-theme
 scss: |
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@400;500;700&display=swap');
   .text-uppercase{
     text-transform: none !important; 
+  }
+  .body{
+    font-family: 'Noto Serif JP', serif;
+  }
+  .h1 .h2 .h3 .h4 .h5{
+    font-family: 'Noto Sans JP', sans-serif;
   }
 readme_index:
   with_frontmatter: true
