--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ scss: |
   .markdown-body{
     font-family: 'Noto Serif JP', serif; !important;
   }
-  .h1 .h2 .h3 .h4 .h5{
+  .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6, .markdown-body dt {
     font-family: 'Noto Sans JP', sans-serif; !important;
   }
 readme_index:
