--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,10 +5,10 @@ scss: |
     text-transform: none !important; 
   }
   .markdown-body{
-    font-family: 'Noto Serif JP', serif; !important;
+    font-family: 'Noto Serif JP', serif !important;
   }
   .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6, .markdown-body dt {
-    font-family: 'Noto Sans JP', sans-serif; !important;
+    font-family: 'Noto Sans JP', sans-serif !important;
   }
 readme_index:
   with_frontmatter: true
