--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ scss: |
   .markdown-body{
     font-family: 'Noto Serif JP', serif !important;
     line-height:1.6;
-    font-weight: 500
+    font-weight: 500;
   }
   .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6, .markdown-body dt {
     font-family: 'Noto Sans JP', sans-serif !important;
