--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: rundocs/jekyll-rtd-theme
-author: Masanori Kobayashi, Kei Nishiyama, Yoshihiko Kunisato, & Takayuki Osugi
+remote_theme: rundocs/jekyll-Merlot-theme
+author: Masanori Kobayashi & Takayuki Osugi
 scss: |
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@400;500;700&display=swap');
   .text-uppercase{
